--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -4,6 +4,10 @@ dotfiles:
   - .editorconfig
 
 restricted:
-  - CODE_OF_CONDUCT.md
-  - CONTRIBUTING.md
   - LICENSE
+  - CONTRIBUTING.md
+  - CODE_OF_CONDUCT.md
+  - CODEOWNERS
+  - .github/**/*
+  - .cljstyle
+  - SECURITY.md
